<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/common_appbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:background="@color/primary_content_bg"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/main_padding"
                android:paddingRight="@dimen/main_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:padding="@dimen/auth_cardview_ev_padding">

                    <ImageView
                        android:id="@+id/iv_tel_icon"
                        android:layout_width="@dimen/auth_login_icon_size"
                        android:layout_height="@dimen/auth_login_icon_size"
                        android:layout_centerVertical="true"
                        android:src="@drawable/auth_tel" />

                    <EditText
                        android:id="@+id/et_tel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/auth_cardview_ev_height"
                        android:digits="1234567890."
                        android:singleLine="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/auth_cardview_ev_iv_margin"
                        android:layout_toEndOf="@id/iv_tel_icon"
                        android:layout_toRightOf="@id/iv_tel_icon"
                        android:background="@null"
                        android:hint="@string/act_auth_tel_hint"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_validate"
                        style="@style/PrimaryButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:enabled="false"
                        android:padding="@dimen/second_padding"
                        android:text="@string/act_auth_btn_validate_text"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/gray_light" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:padding="@dimen/auth_cardview_ev_padding">

                    <ImageView
                        android:id="@+id/iv_passwd_icon"
                        android:layout_width="@dimen/auth_login_icon_size"
                        android:layout_height="@dimen/auth_login_icon_size"
                        android:layout_centerVertical="true"
                        android:src="@drawable/auth_passwd" />

                    <EditText
                        android:id="@+id/et_passswd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/auth_cardview_ev_height"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/auth_cardview_ev_iv_margin"
                        android:layout_marginStart="@dimen/auth_cardview_ev_iv_margin"
                        android:layout_toEndOf="@id/iv_passwd_icon"
                        android:layout_toRightOf="@id/iv_passwd_icon"
                        android:background="@null"
                        android:hint="@string/act_auth_passwd_hint"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_submit"
            style="@style/BlueButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/main_font_size"
            android:text="@string/common_btn_submit" />
    </LinearLayout>
</LinearLayout>