<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="@dimen/actionbar_height"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="?attr/colorPrimary"
            app:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/ToolbarTitle"
            style="@style/ToolbarStyle">

            <!--<android.support.v7.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:iconifiedByDefault="true"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:layout_marginLeft="-20dp"
                android:layout_marginStart="-20dp"
                android:queryHint="搜索" />
-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapWords"
                    android:background="@drawable/bg_searchview"
                    android:layout_toLeftOf="@+id/iv_action_search"
                    android:layout_marginLeft="0dp"
                    android:hint="@string/search"/>
                <ImageView
                    android:id="@+id/iv_action_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/main_padding"
                    android:layout_centerVertical="true"
                    android:src="@drawable/tabbar_search_api_mtrl_alpha_filter"
                    android:background="@color/transparent"/>
            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:clipToPadding="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/searchhistory_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextLight"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/act_search_history_text"/>
                <TextView
                    android:id="@+id/btn_clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextLight"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:text="@string/act_search_history_clear"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_search_history_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/main_padding"
                android:paddingRight="@dimen/main_padding"
                android:clipToPadding="false"
                android:background="@color/white"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>

